Corrected spacing above list elements

--- a/notebook/static/notebook/less/renderedhtml.less
+++ b/notebook/static/notebook/less/renderedhtml.less
@@ -27,7 +27,7 @@
 
     ul:not(.list-inline),
     ol:not(.list-inline) {margin: 0em 2em; padding-left: 0px;}
-    ul {list-style:disc;}
+    ul {list-style:disc; padding-top: 16px;}
     ul ul {list-style:square;}
     ul ul ul {list-style:circle;}
     ol {list-style:decimal;}
